# aitracker

./: CHANGELOG.md  Cargo.toml  README.md
.skill/: SKILL.md
Formula/: ait.rb
src/: main.rs
src/cli/: config_cmd.rs  mod.rs  output.rs  renderer.rs  selector.rs  usage_cmd.rs
src/core/: auth.rs  config.rs  formatter.rs  mod.rs  process.rs  status.rs
src/core/cost/: cache.rs  mod.rs  pricing.rs  scanner.rs
src/core/models/: cost.rs  credits.rs  mod.rs  status.rs  usage.rs
src/core/providers/: amp.rs  antigravity.rs  augment.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  factory.rs  fetch.rs  gemini.rs  jetbrains.rs  kimi.rs  kimi_k2.rs  kiro.rs  minimax.rs  mod.rs  ollama.rs  opencode.rs  openrouter.rs  synthetic.rs  vertex_ai.rs  warp.rs  zai.rs
